--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -36,9 +36,9 @@
   }
 }
 
-:root[class~="sync"] {
-  @media (prefers-color-scheme: dark) {
-    .button {
-    }
-  }
-}
+// :root[class~="sync"] {
+//   @media (prefers-color-scheme: dark) {
+//     .button {
+//     }
+//   }
+// }
