--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -19,33 +19,18 @@ body {
   & {
     scrollbar-color: #5664794c transparent;
   }
-
-  //&::-webkit-scrollbar-track {
-  //  background-color: transparent;
-  //}
-  //
-  //&::-webkit-scrollbar {
-  //  width: 4px;
-  //  height: 4px;
-  //  background-color: #f5f5f5;
-  //}
-  //
-  //&::-webkit-scrollbar-thumb {
-  //  background-color: #c1cad7;
-  //  border: solid 1px white;
-  //  border-radius: 4px;
-  //}
 }
 
 html {
   @apply bg-neutral-bg-1;
 
-  &.dark {
+  &.dark,
+  &.sync {
     @apply bg-neutral-bg-1;
   }
-  &.sync {
-    @media (prefers-color-scheme: dark) {
-      @apply bg-neutral-bg-1;
-    }
-  }
+  // &.sync {
+  //   @media (prefers-color-scheme: dark) {
+  //     @apply bg-neutral-bg-1;
+  //   }
+  // }
 }
