--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -1,6 +1,6 @@
 .nls- {
   &focus {
-    @apply focus-visible:outline focus-visible:outline-offset-1 focus-visible:outline-primary-hover active:outline-none;
+    @apply focus-visible:outline focus-visible:outline-offset-1 focus-visible:outline-primary-hover active:outline-hidden;
   }
 }
 
