--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -1,11 +1,19 @@
 .nls- {
   &focus {
-    @apply focus-visible:outline focus-visible:outline-offset-1 focus-visible:outline-primary-hover active:outline-hidden;
+    &:focus-visible {
+      outline-style: solid;
+      outline-offset: 1px;
+      outline-color: var(--color-primary-hover);
+    }
+    &:active {
+      outline: 2px solid transparent;
+      outline-offset: 2px;
+    }
   }
 }
 
 label {
-  @apply cursor-pointer;
+  cursor: pointer;
 }
 
 .scroll-bar {
