--- a/src/assets/styles/_tables.scss
+++ b/src/assets/styles/_tables.scss
@@ -1,7 +1,9 @@
 @use 'variables';
 
 .row-btn-show {
-  @apply static flex transform-none;
+  position: static;
+  display: flex;
+  transform: none;
 }
 
 @media (min-width: 768px) {
